--- a/css/style.css
+++ b/css/style.css
@@ -67,18 +67,18 @@
 
 
 
-
-
-
-
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 .my-wrapper {
     width: 98%;
     margin: auto;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+header {
+    z-index: 1;
 }
 
 .sony-logo {
@@ -130,6 +130,7 @@ body {
 footer p {
     margin-bottom: 0;
 }
+
 
 
 
