--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 /* ROOT */
 :root{
     --sonybar-bg-color: black;
+    --navbar-color: white;
     --footer-bg-color: #00439c;
     --main-bg-color: #1f1f1f;
     --main-bg-color1: #bebcbb;
     --main-bg-color2: #161c3b;
+
 
     --orange-button: #cd3d0f;
     --gray-button: #363636;
@@ -18,6 +20,10 @@
 
 .s-bar-bg {
     background-color: var(--sonybar-bg-color);
+}
+
+.navbar-bg {
+    background-color: var(--navbar-color);
 }
 
 .g-btn {
@@ -67,6 +73,8 @@
 
 
 
+
+
 .my-wrapper {
     width: 98%;
     margin: auto;
@@ -80,6 +88,33 @@ body {
 header {
     z-index: 1;
 }
+
+
+header .nav-link {
+    color: black;
+}
+
+header .nav-link:focus, 
+header .nav-link:hover {
+    color: var(--text-color);
+}
+
+.shadow-d-down:focus,
+.shadow-d-down:hover {
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
+
+
+.shared-hover:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+
+nav h6 {
+    font-weight: bold;
+    text-align: center;
+}
+
+
 
 .sony-logo {
     width: 80px;
@@ -135,15 +170,10 @@ footer p {
 
 
 /* 
-- come togliere hover sulla navbar?
 - come cambiare toggle sulla bav?
-- controllare comportamento button navbar fino a lg
-- img-fluid o w-100?
 - btn info7danger ecc
 - posizionare play-5-img?
-- card-img-top%card-text sezione nuove uscite
-- width play plus e now
-- logo play bianco
+
  */
 
 
