--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     --main-bg-color: #1f1f1f;
     --main-bg-color1: #bebcbb;
     --main-bg-color2: #161c3b;
-    --text-color: #107ad0;
+    --text-color:#00439c;
     --text-color1: #727272;
     --text-color2: #2d64e6;
 }
@@ -52,36 +52,8 @@
 }
 
 
-/* HOVER BUTTON*/
 
 
-
-/* HOVER sezione CARD*/
-.card-hover:hover {
-    transition: .3s ease-in-out;
-    opacity: 100%;
-    transform: translateY(-10px);
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-}
-
-/* HOVER HEADER */
-header .nav-link:hover {
-    color: var(--text-color);
-}
-
-nav:hover {
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-}
-
-.shared-hover:hover {
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
-}
-
-
-.p5-hover:hover {
-    transition: .3s ease-in-out;
-    opacity: 100%;
-}
 
 .my-wrapper {
     width: 95%;
@@ -102,6 +74,7 @@ h2 {
 }
 
 
+
 /* header&nav */
 header .nav-link {
     color: black;
@@ -117,6 +90,18 @@ nav h6 {
 
 .lens {
     width: 1.5rem;
+}
+
+header .nav-link:hover {
+    color: var(--text-color);
+}
+
+nav:hover {
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
+
+.shared-hover:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 
 
@@ -139,6 +124,14 @@ nav h6 {
     opacity: 50%;
 }
 
+.card-hover:hover {
+    transition: .3s ease-in-out;
+    opacity: 100%;
+    transform: translateY(-10px);
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
+
+
 /* play5 */
 .p5-hover {
     opacity: 50%;
@@ -148,18 +141,23 @@ nav h6 {
     font-size: .8rem;
 }
 
+.p5-hover:hover {
+    transition: .3s ease-in-out;
+    opacity: 100%;
+}
 
 /* jumbo takes two */
 .jumbo-takes-two {
     background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
 }
 
-/* social media */
-
+/* social&store*/
+.store-hover:hover,
 .social-hover:hover {
     transition: .2s ease-in-out;
     scale: 1.02;
 }
+
 
 /* footer*/
 .play-logo {
