--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,12 @@ nav h6 {
     width: 1.5rem;
 }
 
+.fa-circle {
+    font-size: .5rem;
+    vertical-align: middle;
+    color: var(--text-color)
+}
+
 header .nav-link:hover {
     color: var(--text-color);
 }
@@ -103,6 +109,8 @@ nav:hover {
 .shared-hover:hover {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
+
+
 
 
 /* jumbo returnal */
