--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,11 @@ h2 {
 
 
 /* header&nav */
+header {
+    z-index: 1;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
+
 header .nav-link {
     color: black;
 }
@@ -101,11 +106,6 @@ nav h6 {
 header .nav-link:hover {
     color: var(--text-color);
 }
-
-nav:hover {
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-}
-
 .shared-hover:hover {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
